tests/fixtures/valid_programs/pointer_ref.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Pointer and reference operations
    mut x: int = 10;
    mut y: int = 20;
    
    // Reference creation
    mut ref_x: &int = &x;
    mut ref_y: &int = &y;
    
    // Dereferencing
    const val_x: int = *ref_x;
    const val_y: int = *ref_y;
    
    IO::println("Pointer/Reference Test:");
    IO::print_int(val_x);  // 10
    IO::print_int(val_y);  // 20
    
    // Modifying through pointer
    *ref_x = *ref_x + 5;  // x should now be 15
    
    IO::println("After modification:");
    IO::print_int(x);      // 15
    IO::print_int(*ref_x); // 15
    
    return 0;
}