tests/fixtures/invalid_programs/undefined_variable.cryo
namespace Main;

// Semantic error: using undefined variable
function main() -> int {
    const x: int = undefined_var;
    return 0;
}